fix(tabs): add dark mode variables (#752)

--- a/tegel/src/components/tabs/inline-tabs-default/inline-tabs-theme-vars.scss
+++ b/tegel/src/components/tabs/inline-tabs-default/inline-tabs-theme-vars.scss
@@ -1,36 +1,43 @@
 :root,
 .sdds-theme-light {
-  --sdds-inline-tabs-main-bg: var(--sdds-grey-50);
-  --sdds-inline-tabs-main-ongrey-bg: var(--sdds-white);
-  --sdds-inline-tabs-scroll-btn-bg: var(--sdds-grey-200);
-  --sdds-inline-tabs-scroll-btn-hover-bg: var(--sdds-grey-300);
-  --sdds-inline-tabs-scroll-btn-active-bg: var(--sdds-grey-400);
+  --sdds-inline-tabs-main-background: var(--sdds-grey-50);
+  --sdds-inline-tabs-main-ongrey-background: var(--sdds-white);
+  --sdds-inline-tabs-scroll-btn-color: var(--sdds-grey-958);
+  --sdds-inline-tabs-scroll-btn-background: var(--sdds-grey-50);
+  --sdds-inline-tabs-scroll-btn-background-hover: var(--sdds-grey-300);
+  --sdds-inline-tabs-scroll-btn-background-active: var(--sdds-grey-400);
   --sdds-inline-tabs-tab-color: var(--sdds-blue-900);
-  --sdds-inline-tabs-tab-bg: var(--sdds-grey-100);
+  --sdds-inline-tabs-tab-background: var(--sdds-grey-100);
   --sdds-inline-tabs-tab-border-color: var(--sdds-grey-300);
-  --sdds-inline-tabs-tab-indicator-bg: var(--sdds-grey-300);
-  --sdds-inline-tabs-tab-hover-bg: var(--sdds-grey-200);
-  --sdds-inline-tabs-tab-hover-color: var(--sdds-grey-958);
-  --sdds-inline-tabs-tab-active-bg: var(--sdds-grey-50);
-  --sdds-inline-tabs-tab-active-color: var(--sdds-grey-958);
-  --sdds-inline-tabs-tab-active-indicator-bg: var(--sdds-blue-400);
-  --sdds-inline-tabs-tab-active-ongrey-bg: var(--sdds-white);
+  --sdds-inline-tabs-tab-indicator-background: var(--sdds-grey-300);
+  --sdds-inline-tabs-tab-background-hover: var(--sdds-grey-200);
+  --sdds-inline-tabs-tab-color-hover: var(--sdds-grey-958);
+  --sdds-inline-tabs-tab-background-active: var(--sdds-grey-50);
+  --sdds-inline-tabs-tab-color-active: var(--sdds-grey-958);
+  --sdds-inline-tabs-tab-indicator-background-active: var(--sdds-blue-400);
+  --sdds-inline-tabs-tab-background-active-ongrey: var(--sdds-white);
+
+  --sdds-navigation-tabs-tab-color-disabled: var(--sdds-blue-900);
+
 }
 
 .sdds-theme-dark {
-  --sdds-inline-tabs-main-bg: var(--sdds-grey-868);
-  --sdds-inline-tabs-main-ongrey-bg: var(--sdds-grey-900);
-  --sdds-inline-tabs-scroll-btn-bg: var(--sdds-grey-800);
-  --sdds-inline-tabs-scroll-btn-hover-bg: var(--sdds-grey-900);
-  --sdds-inline-tabs-scroll-btn-active-bg: var(--sdds-grey-900);
+  --sdds-inline-tabs-main-background: var(--sdds-grey-868);
+  --sdds-inline-tabs-main-ongrey-background: var(--sdds-grey-900);
+  --sdds-inline-tabs-scroll-btn-color: var(--sdds-grey-50);
+  --sdds-inline-tabs-scroll-btn-background: var(--sdds-grey-868);
+  --sdds-inline-tabs-scroll-btn-background-hover: var(--sdds-grey-900);
+  --sdds-inline-tabs-scroll-btn-background-active: var(--sdds-grey-900);
   --sdds-inline-tabs-tab-color: var(--sdds-grey-50);
-  --sdds-inline-tabs-tab-bg: var(--sdds-grey-846);
+  --sdds-inline-tabs-tab-background: var(--sdds-grey-846);
   --sdds-inline-tabs-tab-border-color: var(--sdds-grey-900);
-  --sdds-inline-tabs-tab-indicator-bg: var(--sdds-grey-900);
-  --sdds-inline-tabs-tab-hover-bg: var(--sdds-grey-800);
-  --sdds-inline-tabs-tab-hover-color: var(--sdds-grey-50);
-  --sdds-inline-tabs-tab-active-bg: var(--sdds-grey-868);
-  --sdds-inline-tabs-tab-active-color: var(--sdds-grey-50);
-  --sdds-inline-tabs-tab-active-indicator-bg: var(--sdds-blue-300);
-  --sdds-inline-tabs-tab-active-ongrey-bg: var(--sdds-grey-900);
+  --sdds-inline-tabs-tab-indicator-background: var(--sdds-grey-900);
+  --sdds-inline-tabs-tab-background-hover: var(--sdds-grey-800);
+  --sdds-inline-tabs-tab-color-hover: var(--sdds-grey-50);
+  --sdds-inline-tabs-tab-background-active: var(--sdds-grey-868);
+  --sdds-inline-tabs-tab-color-active: var(--sdds-grey-50);
+  --sdds-inline-tabs-tab-indicator-background-active: var(--sdds-blue-300);
+  --sdds-inline-tabs-tab-background-active-ongrey: var(--sdds-grey-900);
+
+  --sdds-navigation-tabs-tab-color-disabled: var(--sdds-blue-50);
 }
